tests/golden/6-numeric-literals-and-notations/invalid/common/bad-integer-leading-zero-literal-2.yini
^ BadInteger
badInt = 00123     # NOT a valid, may not have any leading zeros
